translating in progress

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "An easy-to-read, quick reference for PHP best practices, accepted coding standards, and links to authoritative PHP tutorials around the Web"
+description: "Brz i lak za čitanje podsetnik najboljih praksi u PHP ekosistemu, prihvaćeni standardi kodiranja i linkovi ka vodećim PHP tutorijalima"
 ---
 
 {% capture welcome_content %}{% include welcome.md %}{% endcapture %}
